# qt_discovery

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  main.cpp
.devcontainer/: devcontainer.json
src/: MainWindow.cpp  MainWindow.h
src/services/: CalculatorService.cpp  CalculatorService.h
